@@ -1,3 +1,8 @@
+2006-03-09  Jon A. Cruz  <jon@joncruz.org>
+	* src/interface.cpp:
+
+	  Initial cut of color drag-n-drop to items on canvas.
+	
 2006-03-09  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
 	* src/path-chemistry.cpp (sp_selected_path_reverse):
